# simple_nium_time_protocol

./: Cargo.toml  LICENSE  PRESENTATION.html  PRESENTATION.md  README.md
src/: macros.rs  main.rs  ntp_packet.rs
