[package]
name = "simple_nium_time_protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bytes = "1.5.0"
chrono = { version = "0.4.30" }
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["codec", "net"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
